--- a/APIs/test/fixtures/choices.yml
+++ b/APIs/test/fixtures/choices.yml
@@ -1,15 +1,36 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
+選択肢1:
   question_id: 1
   choice_id: 1
-  content: MyString
-  update_name: MyString
-  update_date: 2012-05-28
+  content: 選択肢内容1
+  update_name: 石川
+  update_date: 2012-05-29
 
-two:
-  question_id: 1
-  choice_id: 1
-  content: MyString
-  update_name: MyString
-  update_date: 2012-05-28
+選択肢2:
+  question_id: 2
+  choice_id: 2
+  content: 選択肢内容2
+  update_name: 石川
+  update_date: 2012-05-29
+
+選択肢3:
+  question_id: 3
+  choice_id: 3
+  content: 選択肢内容3
+  update_name: 石川
+  update_date: 2012-05-29
+
+選択肢4:
+  question_id: 4
+  choice_id: 4
+  content: 選択肢内容4
+  update_name: 石川
+  update_date: 2012-05-29
+
+選択肢5:
+  question_id: 5
+  choice_id: 5
+  content: 選択肢内容5
+  update_name: 石川
+  update_date: 2012-05-29
