--- a/APIs/spec/fixtures/answers.yml
+++ b/APIs/spec/fixtures/answers.yml
@@ -1,36 +1,36 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-‰ñ“š1:
+å›ç­”1:
   enq_id: 1
   no: 1
-  answer: ‰ñ“š1
-  update_name: Îì
+  answer: å›ç­”1
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-‰ñ“š2:
+å›ç­”2:
   enq_id: 2
   no: 2
-  answer: ‰ñ“š2
-  update_name: Îì
+  answer: å›ç­”2
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-‰ñ“š3:
+å›ç­”3:
   enq_id: 3
   no: 3
-  answer: ‰ñ“š3
-  update_name: Îì
+  answer: å›ç­”3
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-‰ñ“š4:
+å›ç­”4:
   enq_id: 4
   no: 4
-  answer: ‰ñ“š4
-  update_name: Îì
+  answer: å›ç­”4
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-‰ñ“š5:
+å›ç­”5:
   enq_id: 3
   no: 5
-  answer: ‰ñ“š5
-  update_name: Îì
+  answer: å›ç­”5
+  update_name: çŸ³å·
   update_date: 2012-05-29
