--- a/APIs/spec/fixtures/enq_questions.yml
+++ b/APIs/spec/fixtures/enq_questions.yml
@@ -1,36 +1,36 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-ƒAƒ“ƒP[ƒgİ–â1:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆè¨­å•1:
   enq_id: 1
   no: 1
   question_id: 1
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒgİ–â2:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆè¨­å•2:
   enq_id: 2
   no: 2
   question_id: 2
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒgİ–â3:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆè¨­å•3:
   enq_id: 3
   no: 3
   question_id: 3
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒgİ–â4:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆè¨­å•4:
   enq_id: 4
   no: 4
   question_id: 4
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒgİ–â5:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆè¨­å•5:
   enq_id: 2
   no: 5
   question_id: 5
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
