--- a/APIs/spec/fixtures/enqs.yml
+++ b/APIs/spec/fixtures/enqs.yml
@@ -1,37 +1,37 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-ƒAƒ“ƒP[ƒg1:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆ1:
   enq_id: 1
   title: test1
-  description: test1‚Å‚·
+  description: test1ã§ã™
   css: css1
   movie: movie1
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒg2:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆ2:
   enq_id: 2
   title: test2
-  description: test2‚Å‚·
+  description: test2ã§ã™
   css: css2
   movie: movie2
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒg3:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆ3:
   enq_id: 3
   title: test3
-  description: test3‚Å‚·
+  description: test3ã§ã™
   css: css3
   movie: movie3
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
 
-ƒAƒ“ƒP[ƒg4:
+ã‚¢ãƒ³ã‚±ãƒ¼ãƒˆ4:
   enq_id: 4
   title: test4
-  description: test4‚Å‚·
+  description: test4ã§ã™
   css: css4
   movie: movie4
-  update_name: Îì
+  update_name: çŸ³å·
   update_date: 2012-05-29
