--- a/dapi/Gemfile
+++ b/dapi/Gemfile
@@ -22,6 +22,7 @@ end
 
 gem 'jquery-rails'
 
+gem "composite_primary_keys", "~> 5.0.4"
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
