--- a/dapi/Gemfile
+++ b/dapi/Gemfile
@@ -7,6 +7,7 @@ gem 'rails', '3.2.4'
 
 gem 'mysql2'
 
+gem 'uuidtools'
 
 # Gems used only for assets and not required
 # in production environments by default.
