--- a/spec/fixtures/enqs.yml
+++ b/spec/fixtures/enqs.yml
@@ -1,6 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
+  uuid: enq1
   status: 1
   point: 1
   closing_at: 2012-04-06 14:00:00
@@ -11,6 +12,7 @@ one:
   thumbnail: MyString
 
 two:
+  uuid: enq2
   status: 1
   point: 1
   closing_at: 2012-08-06 14:00:00
