--- a/spec/fixtures/enq_faces.yml
+++ b/spec/fixtures/enq_faces.yml
@@ -1,15 +1,61 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
+enq1TO:
+  uuid: enqface1
   enq_id: enq1
   face: TO
-  first_page_id: MyString
+  first_page_id: enqpage1
   wait_until: 2012-06-03 18:07:08
-  css: MyString
+  css: css1
+  title: アンケート1TO
+  description: アンケート1説明TO
 
-two:
+enq1PC:
+  uuid: enqface2
   enq_id: enq1
   face: PC
-  first_page_id: MyString
+  first_page_id: enqpage1
   wait_until: 2012-06-03 18:07:08
-  css: MyString
+  css: css2
+  title: アンケート1PC
+  description: アンケート1説明PC
+
+enq2TO:
+  uuid: enqface3
+  enq_id: enq2
+  face: TO
+  first_page_id: enqpage2
+  wait_until: 2012-06-03 18:07:08
+  css: css3
+  title: アンケート2TO
+  description: アンケート2説明TO
+
+enq2PC:
+  uuid: enqface4
+  enq_id: enq2
+  face: PC
+  first_page_id: enqpage2
+  wait_until: 2012-06-03 18:07:08
+  css: css4
+  title: アンケート2PC
+  description: アンケート2説明PC
+
+enq3TO:
+  uuid: enqface5
+  enq_id: enq3
+  face: TO
+  first_page_id: enqpage3
+  wait_until: 2012-06-03 18:07:08
+  css: css5
+  title: アンケート3TO
+  description: アンケート3説明TO
+
+enq3PC:
+  uuid: enqface6
+  enq_id: enq3
+  face: PC
+  first_page_id: enqpage3
+  wait_until: 2012-06-03 18:07:08
+  css: css6
+  title: アンケート3PC
+  description: アンケート3説明PC
