--- a/dapi/spec/fixtures/enq_pages.yml
+++ b/dapi/spec/fixtures/enq_pages.yml
@@ -1,36 +1,49 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-e1TOpage1:
-  uuid: enqpage1
-  enq_face_id: enqface1
+sc_TO_page1:
+  uuid: enqpageTO1page1
+  enq_face_id: enq1TO
   description: アンケ1TOページ1
-  next_page_id: enqpage2
+  next_page_id: enqpageTO1page2
   wait_until: 1
 
-e1TOpage2:
-  uuid: enqpage2
-  enq_face_id: enqface1
+sc_TO_page2:
+  uuid: enqpageTO1page2
+  enq_face_id: enq1TO
   description: アンケ1TOページ2
-  next_page_id: enqpage3
+  next_page_id: enqpageTO1page3
   wait_until: 1
 
-e1TOpage3:
-  uuid: enqpage3
-  enq_face_id: enqface1
+sc_TO_page3:
+  uuid: enqpageTO1page3
+  enq_face_id: enq1TO
   description: アンケ1TOページ3
   next_page_id: 
   wait_until: 1
 
-e1PCpage1:
-  uuid: enqpage4
-  enq_face_id: enqface2
-  description: アンケ1PCページ1
-  next_page_id: enqpage5
+sc_TO_page4-1:
+  uuid: enqpageTO1page2
+  enq_face_id: enq1TO
+  description: アンケ1TOページ2
+  next_page_id: enqpageTO1page3
   wait_until: 1
 
-e1PCpage2:
-  uuid: enqpage5
-  enq_face_id: enqface2
+sc_TO_page4-2:
+  uuid: enqpageTO1page3
+  enq_face_id: enq1TO
+  description: アンケ1TOページ3
+  next_page_id: 
+  wait_until: 1
+sc_PC_page1:
+  uuid: enqpagePC1page1
+  enq_face_id: enq1PC
+  description: アンケ1PCページ1
+  next_page_id: enqpagePC1page2
+  wait_until: 1
+
+sc_PC_page2:
+  uuid: enqpagePC1page2
+  enq_face_id: enq1PC
   description: アンケ1PCページ2
   next_page_id: 
   wait_until: 1
