--- a/dapi/test/fixtures/enqs.yml
+++ b/dapi/test/fixtures/enqs.yml
@@ -1,17 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
+status1:
+  uuid: enq1
   status: 1
-  title: MyString
-  description: MyText
-  message: MyText
-  movie: MyString
-  thumbnail: MyString
 
-two:
-  status: 1
-  title: MyString
-  description: MyText
-  message: MyText
-  movie: MyString
-  thumbnail: MyString
+status0:
+  uuid: enq2
+  status: 0
+
+status9:
+  uuid: enq3
+  status: 9
