--- a/dapi/spec/fixtures/campaigns.yml
+++ b/dapi/spec/fixtures/campaigns.yml
@@ -8,7 +8,7 @@ success_confirm:
   point: 10
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: movie1
+  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
   thumbnail: tumbnail1
   message: キャンペーン1メッセージ
   conversion_tag: cnvtag1
@@ -25,7 +25,7 @@ status0:
   point: 20
   opening_at: 2100-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: movie2
+  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
   thumbnail: tumbnail2
   message: キャンペーン2メッセージ
   conversion_tag: cnvtag2
@@ -42,7 +42,7 @@ status9:
   point: 30
   opening_at: 2000-1-1 0:0:0
   closing_at: 2100-1-1 0:0:0
-  movie: movie3
+  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
   thumbnail: tumbnail3
   message: キャンペーン3メッセージ
   conversion_tag: cnvtag3
@@ -59,7 +59,7 @@ closed:
   point: 40
   opening_at: 2000-1-1 0:0:0
   closing_at: 2012-1-1 0:0:0
-  movie: movie4
+  movie: http://cdn.poncan.jp/js/fixed.swfobject.js
   thumbnail: tumbnail4
   message: キャンペーン4メッセージ
   conversion_tag: cnvtag4
